--- a/study-biz/pom.xml
+++ b/study-biz/pom.xml
@@ -27,6 +27,7 @@
 			<artifactId>spring-context</artifactId>
 		</dependency>
 
+		<!-- util start -->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
@@ -38,6 +39,20 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.7</version>
+		</dependency>
+		<!-- util end -->
+
 	</dependencies>
 
 </project>
