--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 	<properties>
 		<study.version>0.0.1</study.version>
 		<spring.version>2.5.6</spring.version>
+		<slf4j.version>1.7.10</slf4j.version>
+		<log4j.version>2.3</log4j.version>
 	</properties>
 
 	<dependencyManagement>
@@ -49,6 +51,30 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
 				<version>${spring.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.lmax</groupId>
+				<artifactId>disruptor</artifactId>
+				<version>3.0.0</version>
 			</dependency>
 
 		</dependencies>
