--- a/study-demo/pom.xml
+++ b/study-demo/pom.xml
@@ -77,6 +77,13 @@
             <artifactId>rxjava</artifactId>
             <version>1.0.14</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.6</version>
+            <scope>provided</scope>
+        </dependency>
         <!-- util end -->
 
 
