--- a/study-biz/pom.xml
+++ b/study-biz/pom.xml
@@ -87,6 +87,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+		</dependency>
 		<!-- util end -->
 
 	</dependencies>
