web and excel util

--- a/study-web/src/main/webapp/WEB-INF/web.xml
+++ b/study-web/src/main/webapp/WEB-INF/web.xml
@@ -12,10 +12,29 @@
 			classpath:config/spring/appcontext-*.xml;
 		</param-value>
 	</context-param>
-	
+
+	<context-param>
+		<param-name>log4jConfiguration</param-name>
+		<param-value>classpath:log/log4j2.xml</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
+	</listener>
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
+	<servlet>
+		<servlet-name>myServlet</servlet-name>
+		<servlet-class>com.dianping.study.web.servlet.MyServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>myServlet</servlet-name>
+		<url-pattern>/myServlet</url-pattern>
+	</servlet-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
