--- a/study-biz/pom.xml
+++ b/study-biz/pom.xml
@@ -93,6 +93,18 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.9</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>2.2</version>   <!--不要升级,高版本对java 1.6不支持-->
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.8</version>
+		</dependency>
 		<!-- util end -->
 
 	</dependencies>
