--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	</modules>
 	<properties>
 		<study.version>0.0.1</study.version>
-		<spring.version>2.5.6</spring.version>
+		<spring.version>3.2.9.RELEASE</spring.version>
 		<slf4j.version>1.7.10</slf4j.version>
 		<log4j.version>2.3</log4j.version>
 	</properties>
